--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\".title # 'Art Vandelay'"
+    "name = \"art vandelay\".title # 'Art Vandelay'"
    ]
   },
   {
