Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -140,22 +140,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function str.title>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name = \"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\". # 'Art Vandelay'"
    ]
   },
   {
