--- a/index.ipynb
+++ b/index.ipynb
@@ -140,11 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function str.title>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"art vandelay\". # 'Art Vandelay'"
+    "\"art vandelay\".title # 'Art Vandelay'"
    ]
   },
   {
